[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/tnt_input_engine/remap/code/inputpanel.gd" type="Script" id=1]

[node name="InputPanel" type="Control"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 300.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnApply" type="Button" parent="Panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -52.0
margin_right = 75.0
margin_bottom = -12.0
disabled = true
text = "Apply"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnCancel" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -94.0
margin_top = -52.0
margin_right = -12.0
margin_bottom = -12.0
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblInfo_1" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -111.0
margin_top = 16.0
margin_right = 111.0
margin_bottom = 30.0
text = "Remap button on hardware Joypad."
align = 1

[node name="lblInfo_2" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -140.5
margin_top = 40.0
margin_right = 140.5
margin_bottom = 54.0
text = "Press desidered button on joypad to remap."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblWait" type="Label" parent="Panel"]
modulate = Color( 0.392157, 0.866667, 0.192157, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -140.5
margin_top = 72.0
margin_right = 140.5
margin_bottom = 86.0
text = "...waiting..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblResult" type="Label" parent="Panel"]
modulate = Color( 0.498039, 0.721569, 1, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -140.5
margin_top = 104.0
margin_right = 140.5
margin_bottom = 118.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/btnApply" to="." method="_on_btnApply_pressed"]
[connection signal="pressed" from="Panel/btnCancel" to="." method="_on_btnCancel_pressed"]
